# camera-monitor

./: .gitignore  FTP_SERVER.md  README.md  RELEASING.md
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ftp_server.rs  main.rs
