[package]
name = "camera-monitor"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
digest_auth = "0.3"
get_if_addrs = "0.5"
async-trait = "0.1"
libunftp = "0.21.0"
unftp-sbe-fs = "0.3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
